# iced-cpuid

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml
src/: main.rs
