[package]
name = "iced-cpuid"
version = "1.0.0"
edition = "2018"
description = "Shows CPUID features and instruction encodings used by x86/x64 binaries"

[dependencies]
anyhow = "1.0.41"
hashbrown = "0.11.2"
iced-x86 = { version = "1.12.0", default-features = false, features = ["std", "decoder", "instr_info", "op_code_info"] }
object = "0.25.3"
structopt = "0.3.21"

[profile.release]
codegen-units = 1 
lto = true
opt-level = 3