[package]
name = "iced-cpuid"
version = "1.0.0"
edition = "2018"
license = "MIT"
description = "Shows CPUID features and instruction encodings used by x86/x64 binaries"
homepage = "https://github.com/icedland/iced-cpuid"
repository = "https://github.com/icedland/iced-cpuid"
readme = "README.md"
# At most 5 keywords can be used
keywords = ["cpuid", "disassembler", "x86", "amd64", "x86_64"]
categories = ["development-tools::debugging", "encoding", "hardware-support"]

[dependencies]
anyhow = "1.0.41"
hashbrown = "0.11.2"
iced-x86 = { version = "1.12.0", default-features = false, features = ["std", "decoder", "instr_info", "op_code_info"] }
object = "0.27.1"
structopt = "0.3.21"

[profile.release]
codegen-units = 1 
lto = true
opt-level = 3
