[package]
name = "iced-cpuid"
version = "1.0.0"
edition = "2018"
license = "MIT"
description = "Shows CPUID features and instruction encodings used by x86/x64 binaries"
homepage = "https://github.com/icedland/iced-cpuid"
repository = "https://github.com/icedland/iced-cpuid"
readme = "README.md"
# At most 5 keywords can be used
keywords = ["cpuid", "disassembler", "x86", "amd64", "x86_64"]
categories = ["development-tools::debugging", "encoding", "hardware-support"]

[dependencies]
anyhow = "1.0.55"
hashbrown = "0.15.1"
iced-x86 = { version = "1.17.0", default-features = false, features = ["std", "decoder", "instr_info", "op_code_info"] }
object = "0.36.2"
structopt = "0.3.26"

[profile.release]
codegen-units = 1 
lto = true
opt-level = 3
